--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
-    "hammerjs": "~2.0.4"
+    "hammerjs": "~2.0.4",
+    "sinonjs": "~1.17.1",
+    "sinon": "http://sinonjs.org/releases/sinon-1.17.2.js"
   }
 }
