--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ cordova/platforms/ios/cordova/console.log
 *.xcuserdatad
 
 # android
-cordova/platforms/android/assets/www
+#cordova/platforms/android/assets/www
 cordova/platforms/android/bin
 cordova/platforms/android/gen
 cordova/platforms/android/local.properties
